--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,29 +5,29 @@
 		<div>
 			<div>
 				<p class="mat-body-1"><b>Aim</b><br>
- 				The aim of our college is to provide a supportive and challenging environment in which students acquire knowledge, 
- 				exercise good citizenship and adhere to high ethical standards. The principle focus of the college's academic 
- 				program is undergraduate education in selected liberal and pre-professional studies, the the role of teaching is central to the 
+ 				The aim of our college is to provide a supportive and challenging environment in which students acquire knowledge,
+ 				exercise good citizenship and adhere to high ethical standards. The principle focus of the college's academic
+ 				program is undergraduate education in selected liberal and pre-professional studies, the the role of teaching is central to the
  				college's mission.</p>
  			<p class="mat-body-1"><b>Vision</b><br>
- 				Our college is committed to develop in young minds the state-of-the-art technology and high academic ambiance by 
+ 				Our college is committed to develop in young minds the state-of-the-art technology and high academic ambiance by
  				synergistic spiritual and technological competence continually, in a learning environment.
  			</p>
  			<p class="mat-body-1"><b>Mission</b><br>
- 				Our mission is to provide an environment that allows future leaders to realize their potential in full and gives 
- 				them the opportunity to develop  their individuality and skills through education that is backed by cutting-edge 
+ 				Our mission is to provide an environment that allows future leaders to realize their potential in full and gives
+ 				them the opportunity to develop  their individuality and skills through education that is backed by cutting-edge
  				research.
  			</p>
  			<p class="mat-body-1">
- 				To develop professionals who are committed to their personal and professional endeavors and who have the vision, 
+ 				To develop professionals who are committed to their personal and professional endeavors and who have the vision,
  				courage and dedication to initiate and manage the change.
- 			</p>							
+ 			</p>
 			</div>
-			<img class="aboutclgimg" src="./assets/aboutclgimg.jpg">
+			<img class="aboutclgimg" src="./assets/aboutclg.jpg">
   		</div>
-  		
+
   		<div class="section-seperator"></div>
-  		
+
   		<h1 id="infrastructure" class="mat-display-3">Infrastructure</h1>
 		<div class="divider"></div>
   		<mat-card style="margin-bottom: 10px;">
@@ -41,7 +41,7 @@
 							<td>:</td>
 							<td>16146</td>
 							<td><mat-divider></mat-divider></td>
-						</tr>						
+						</tr>
 						<tr>
 							<td>Land Area (in Acres)</td>
 							<td>:</td>
@@ -173,9 +173,9 @@
 				</div>
 			</mat-card-content>
 		</mat-card>
-		
+
 		<div class="section-seperator"></div>
-		
+
 		<h1 id="activities" class="mat-display-3">Activities</h1>
 		<div class="divider"></div>
 		<mat-card>
@@ -199,25 +199,25 @@
 				</div>
 			</mat-card-content>
 		</mat-card>
-		
+
 		<div class="section-seperator"></div>
-		
+
 		<h1 id="principal-desk" class="mat-display-3">From Principal's Desk</h1>
 		<div class="divider"></div>
 		<div class="flex-box">
 			<div style="margin-right: 30px;">
  				<p class="mat-body-1">I believe in developing responsible citizenship and social responsibility by perception
- 				 and example. We provide a friendly and supportive environment that not only enhance the self-esteem of each 
- 				 individual but also challenges each to develop understanding skills, abilities and talents to the full. We 
- 				 expect and  Patil Junior College values it's past builds upon its strengths, approaching new as it continuously 
+ 				 and example. We provide a friendly and supportive environment that not only enhance the self-esteem of each
+ 				 individual but also challenges each to develop understanding skills, abilities and talents to the full. We
+ 				 expect and  Patil Junior College values it's past builds upon its strengths, approaching new as it continuously
  				 looks to future.</p>
 				<p class="mat-body-1" style="text-align: right;">Principle<br>Dr. D.Y. Patil Junior College</p>
  			</div>
  			<img class="principaldeskimg" src="./assets/principle.jpg">
 		</div>
-		
+
 		<div class="section-seperator"></div>
-			
+
 		<h1 id="about-sanstha" class="mat-display-3">Dr. D.Y. Patil Shikshan Sanstha Group of Educational Campus</h1>
 		<div class="divider"></div>
 		<mat-card style="margin-bottom: 20px;">
@@ -237,7 +237,7 @@
 					<div class="photo-container"  style="margin-right: 15px; flex-grow:1;">
 						<img src="./assets/as-img3.jpg">
 						<div class="text-block">Dr. D.Y. Patil MBA College</div>
-					</div>															
+					</div>
 				</div>
 				<div style="margin-bottom: 15px;" class="photo-container-row">
 					<div class="photo-container" style="margin-right: 15px; flex-grow:1;">
@@ -251,12 +251,12 @@
 					<div class="photo-container" style="margin-right: 15px; flex-grow:1;">
 						<img src="./assets/as-img6.jpg">
 						<div class="text-block">Dr. D.Y. Patil Sports Academy</div>
-					</div>					
+					</div>
 				</div>
 			</mat-card-content>
 		</mat-card>
 	</div>
-	
+
 	<div class="table-of-contents">
 		<div class="table-container">
 			<div style="margin-left: 10px;">
@@ -264,10 +264,9 @@
 				<a id="content-list-item" mat-list-item (click)="scrollTo('about-college');">About College</a>
 				<a id="content-list-item" mat-list-item (click)="scrollTo('infrastructure');">Infrastructure</a>
 				<a id="content-list-item" mat-list-item (click)="scrollTo('activities');">Activities</a>
-				<a id="content-list-item" mat-list-item (click)="scrollTo('principal-desk');">From Principal's Desk</a>				
+				<a id="content-list-item" mat-list-item (click)="scrollTo('principal-desk');">From Principal's Desk</a>
 				<a id="content-list-item" mat-list-item (click)="scrollTo('about-sanstha');">About Sanstha</a>
 			</div>
 		</div>
 	</div>
 </div>
-
