--- a/src/app/academics/academics.component.html
+++ b/src/app/academics/academics.component.html
@@ -1,217 +1,233 @@
 <div class="doc-container">
-<div class="doc-content">
-<h1 class="mat-display-3">Syllabus</h1>
-<div class="divider"></div>
-<h2 id="science" class="mat-title">Science</h2>
-<p class="mat-body-1">
-	<b>11th Science In-take:</b> 80 + 80<br>
-	<b>11th Science In-take:</b> 80 + 80
-</p>
-<mat-card style="margin-bottom: 10px;">
-	<mat-card-header>
-		<mat-card-title class="mat-title">Syllabus</mat-card-title>
-	</mat-card-header>
-	<mat-card-content>
-		<table>
-			<tr>
-				<td><p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Class</p></td>
-				<td><p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Subject</p></td>
-			</tr>						
-			<tr>
-				<td rowspan="8">11th and 12th Science</td>
-				<td>Physics</td>
-			</tr>
-			<tr>
-				<td>Chemistry</td>
-			</tr>
-			<tr>
-				<td>Mathematics</td>
-			</tr>
-			<tr>
-				<td>Biology</td>
-			</tr>
-			<tr>
-				<td>English</td>
-			</tr>
-			<tr>
-				<td>IT</td>
-			</tr>
-			<tr>
-				<td>Hindi</td>
-			</tr>
-			<tr>
-				<td>Geography</td>
-			</tr>
-		</table>
-	</mat-card-content>
-</mat-card>
-<mat-card>
-	<mat-card-header>
-		<mat-card-title class="mat-title">11th and 12th Science Groups</mat-card-title>
-	</mat-card-header>
-	<mat-card-content>
-		<table>
-			<tr>
-				<td><p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Sr.</p></td>
-				<td colspan="6"><p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Subjects</p></td>
-			</tr>
-			<tr>
-				<td>1.</td>
-				<td>Physics</td>
-				<td>Chemistry</td>
-				<td>Mathematics</td>
-				<td>Bio</td>
-				<td>English</td>
-				<td>Hindi/IT</td>
-			</tr>
-			<tr>
-				<td>2.</td>
-				<td>Physics</td>
-				<td>Chemistry</td>
-				<td>Mathematics</td>
-				<td>Geography</td>
-				<td>English</td>
-				<td>Hindi/IT</td>
-			</tr>
-			<tr>
-				<td>3.</td>
-				<td>Physics</td>
-				<td>Chemistry</td>
-				<td>Geography</td>
-				<td>Bio</td>
-				<td>English</td>
-				<td>Hindi/IT</td>
-			</tr>
-			<tr>
-				<td>4.</td>
-				<td>Physics</td>
-				<td>Chemistry</td>
-				<td>Mathematics</td>
-				<td>IT</td>
-				<td>English</td>
-				<td>Hindi</td>
-			</tr>
-			<tr>
-				<td>5.</td>
-				<td>Physics</td>
-				<td>Chemistry</td>
-				<td>IT</td>
-				<td>Bio</td>
-				<td>English</td>
-				<td>Hindi</td>
-			</tr>
-		</table>
-	</mat-card-content>
-</mat-card>
-<div class="section-seperator"></div>
-<div class="divider"></div>
-<h2 id="commerce" class="mat-title">Commerce</h2>
-<p class="mat-body-1">
-	<b>11th Commerce In-take:</b> 80<br>
-	<b>11th Commerce In-take:</b> 80
-</p>
-<mat-card>
-	<mat-card-header>
-		<mat-card-title class="mat-title">Syllabus</mat-card-title>
-	</mat-card-header>
-	<mat-card-content>
-		<table>
-			<tr>
-				<td><p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Class</p></td>
-				<td><p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Subject</p></td>
-			</tr>						
-			<tr>
-				<td rowspan="8">11th and 12th Commerce</td>
-				<td>English</td>
-			</tr>
-			<tr>
-				<td>Account</td>
-			</tr>
-			<tr>
-				<td>OC</td>
-			</tr>
-			<tr>
-				<td>Eco</td>
-			</tr>
-			<tr>
-				<td>SP</td>
-			</tr>
-			<tr>
-				<td>IT</td>
-			</tr>
-			<tr>
-				<td>Hindi</td>
-			</tr>
-			<tr>
-				<td>Geography</td>
-			</tr>
-		</table>
-		<p class="mat-body-1">*Choose any one subject from IT, Hindi, SP</p>
-	</mat-card-content>
-</mat-card>
-<div class="section-seperator"></div>
-<div class="divider"></div>
-<h2 id="arts" class="mat-title">Arts</h2>
-<p class="mat-body-1">
-	<b>11th Arts In-take:</b> 80<br>
-	<b>11th Arts In-take:</b> 80
-</p>
-<mat-card style="margin-bottom: 10px;">
-	<mat-card-header>
-		<mat-card-title class="mat-title">Syllabus</mat-card-title>
-	</mat-card-header>
-	<mat-card-content>
-		<table>
-			<tr>
-				<td><p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Class</p></td>
-				<td><p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Subject</p></td>
-			</tr>						
-			<tr>
-				<td rowspan="10">11th and 12th Arts</td>
-				<td>English</td>
-			</tr>
-			<tr>
-				<td>Marathi</td>
-			</tr>
-			<tr>
-				<td>Hindi</td>
-			</tr>
-			<tr>
-				<td>Geography</td>
-			</tr>
-			<tr>
-				<td>Psychology</td>
-			</tr>
-			<tr>
-				<td>Economics</td>
-			</tr>
-			<tr>
-				<td>Political Science</td>
-			</tr>
-			<tr>
-				<td>History</td>
-			</tr>
-			<tr>
-				<td>Sociology</td>
-			</tr>
-			<tr>
-				<td>IT</td>
-			</tr>
-		</table>
-		<p class="mat-body-1">*Choose any one subject from IT, Hindi, SP</p>
-	</mat-card-content>
-</mat-card>
+	<div class="doc-content">
+		<h1 class="mat-display-3">Syllabus</h1>
+		<div class="divider"></div>
+		<h2 id="science" class="mat-title">Science</h2>
+		<p class="mat-body-1">
+			<b>11th Science In-take:</b> 80 + 80<br>
+			<b>11th Science In-take:</b> 80 + 80
+		</p>
+		<mat-card style="margin-bottom: 10px;">
+			<mat-card-header>
+				<mat-card-title class="mat-title">Syllabus</mat-card-title>
+			</mat-card-header>
+			<mat-card-content>
+				<table>
+					<tr>
+						<td>
+							<p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Class</p>
+						</td>
+						<td>
+							<p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Subject</p>
+						</td>
+					</tr>
+					<tr>
+						<td rowspan="8">11th and 12th Science</td>
+						<td>Physics</td>
+					</tr>
+					<tr>
+						<td>Chemistry</td>
+					</tr>
+					<tr>
+						<td>Mathematics</td>
+					</tr>
+					<tr>
+						<td>Biology</td>
+					</tr>
+					<tr>
+						<td>English</td>
+					</tr>
+					<tr>
+						<td>IT</td>
+					</tr>
+					<tr>
+						<td>Hindi</td>
+					</tr>
+					<tr>
+						<td>Geography</td>
+					</tr>
+				</table>
+			</mat-card-content>
+		</mat-card>
+		<mat-card>
+			<mat-card-header>
+				<mat-card-title class="mat-title">11th and 12th Science Groups</mat-card-title>
+			</mat-card-header>
+			<mat-card-content>
+				<table>
+					<tr>
+						<td>
+							<p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Sr.</p>
+						</td>
+						<td colspan="6">
+							<p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Subjects</p>
+						</td>
+					</tr>
+					<tr>
+						<td>1.</td>
+						<td>Physics</td>
+						<td>Chemistry</td>
+						<td>Mathematics</td>
+						<td>Bio</td>
+						<td>English</td>
+						<td>Hindi/IT</td>
+					</tr>
+					<tr>
+						<td>2.</td>
+						<td>Physics</td>
+						<td>Chemistry</td>
+						<td>Mathematics</td>
+						<td>Geography</td>
+						<td>English</td>
+						<td>Hindi/IT</td>
+					</tr>
+					<tr>
+						<td>3.</td>
+						<td>Physics</td>
+						<td>Chemistry</td>
+						<td>Geography</td>
+						<td>Bio</td>
+						<td>English</td>
+						<td>Hindi/IT</td>
+					</tr>
+					<tr>
+						<td>4.</td>
+						<td>Physics</td>
+						<td>Chemistry</td>
+						<td>Mathematics</td>
+						<td>IT</td>
+						<td>English</td>
+						<td>Hindi</td>
+					</tr>
+					<tr>
+						<td>5.</td>
+						<td>Physics</td>
+						<td>Chemistry</td>
+						<td>IT</td>
+						<td>Bio</td>
+						<td>English</td>
+						<td>Hindi</td>
+					</tr>
+				</table>
+			</mat-card-content>
+		</mat-card>
+		<div class="section-seperator"></div>
+		<div class="divider"></div>
+		<h2 id="commerce" class="mat-title">Commerce</h2>
+		<p class="mat-body-1">
+			<b>11th Commerce In-take:</b> 80<br>
+			<b>11th Commerce In-take:</b> 80
+		</p>
+		<mat-card>
+			<mat-card-header>
+				<mat-card-title class="mat-title">Syllabus</mat-card-title>
+			</mat-card-header>
+			<mat-card-content>
+				<table>
+					<tr>
+						<td>
+							<p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Class</p>
+						</td>
+						<td>
+							<p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Subject</p>
+						</td>
+					</tr>
+					<tr>
+						<td rowspan="8">11th and 12th Commerce</td>
+						<td>English</td>
+					</tr>
+					<tr>
+						<td>Account</td>
+					</tr>
+					<tr>
+						<td>OC</td>
+					</tr>
+					<tr>
+						<td>Eco</td>
+					</tr>
+					<tr>
+						<td>SP</td>
+					</tr>
+					<tr>
+						<td>IT</td>
+					</tr>
+					<tr>
+						<td>Hindi</td>
+					</tr>
+					<tr>
+						<td>Geography</td>
+					</tr>
+				</table>
+				<p class="mat-body-1">*Choose any one subject from IT, Hindi, SP</p>
+			</mat-card-content>
+		</mat-card>
+		<div class="section-seperator"></div>
+		<div class="divider"></div>
+		<h2 id="arts" class="mat-title">Arts</h2>
+		<p class="mat-body-1">
+			<b>11th Arts In-take:</b> 80<br>
+			<b>11th Arts In-take:</b> 80
+		</p>
+		<mat-card style="margin-bottom: 10px;">
+			<mat-card-header>
+				<mat-card-title class="mat-title">Syllabus</mat-card-title>
+			</mat-card-header>
+			<mat-card-content>
+				<table>
+					<tr>
+						<td>
+							<p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Class</p>
+						</td>
+						<td>
+							<p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Subject</p>
+						</td>
+					</tr>
+					<tr>
+						<td rowspan="10">11th and 12th Arts</td>
+						<td>English</td>
+					</tr>
+					<tr>
+						<td>Marathi</td>
+					</tr>
+					<tr>
+						<td>Hindi</td>
+					</tr>
+					<tr>
+						<td>Geography</td>
+					</tr>
+					<tr>
+						<td>Psychology</td>
+					</tr>
+					<tr>
+						<td>Economics</td>
+					</tr>
+					<tr>
+						<td>Political Science</td>
+					</tr>
+					<tr>
+						<td>History</td>
+					</tr>
+					<tr>
+						<td>Sociology</td>
+					</tr>
+					<tr>
+						<td>IT</td>
+					</tr>
+				</table>
+				<p class="mat-body-1">*Choose any one subject from IT, Hindi, SP</p>
+			</mat-card-content>
+		</mat-card>
 
 
-</div>
-<div class="table-of-contents">
-	<div class="table-container">
-		<div style="margin-left: 10px;">
-			<div style="font-size: 13px; font-weight: 700; line-height: 1.7;">Contents<br></div>
-			<a style="font-size: 13px; line-height: 1.7;" mat-list-item (click)="scrollTo('science');" role="listitem">Science</a>
-			<a style="font-size: 13px; line-height: 1.7;" mat-list-item (click)="scrollTo('commerce');" role="listitem">Commerce</a>
-			<a style="font-size: 13px; line-height: 1.7;" mat-list-item (click)="scrollTo('arts');" role="listitem">Arts</a>
-		</div>		
 	</div>
-</div>
+	<div class="table-of-contents">
+		<div class="table-container">
+			<div style="margin-left: 10px;">
+				<div style="font-size: 13px; font-weight: 700; line-height: 1.7;">Contents<br></div>
+				<a style="font-size: 13px; line-height: 1.7;" mat-list-item (click)="scrollTo('science');" role="listitem">Science</a>
+				<a style="font-size: 13px; line-height: 1.7;" mat-list-item (click)="scrollTo('commerce');" role="listitem">Commerce</a>
+				<a style="font-size: 13px; line-height: 1.7;" mat-list-item (click)="scrollTo('arts');" role="listitem">Arts</a>
+			</div>
+		</div>
+	</div>
 </div>
