--- a/src/app/admission/admission.component.html
+++ b/src/app/admission/admission.component.html
@@ -7,13 +7,27 @@
 			<mat-card-content>
 				<table>
 					<tr>
-						<td><p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Faculty</p></td>
-						<td><p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Course Level</p></td>
-						<td><p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Approved Courses</p></td>
-						<td><p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Duration</p></td>
-						<td><p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Started</p></td>
-						<td><p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">In-take</p></td>
-						<td><p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Admissions</p></td>
+						<td>
+							<p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Faculty</p>
+						</td>
+						<td>
+							<p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Course Level</p>
+						</td>
+						<td>
+							<p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Approved Courses</p>
+						</td>
+						<td>
+							<p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Duration</p>
+						</td>
+						<td>
+							<p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Started</p>
+						</td>
+						<td>
+							<p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">In-take</p>
+						</td>
+						<td>
+							<p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Admissions</p>
+						</td>
 					</tr>
 					<tr>
 						<td>Commerce</td>
