--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -2,12 +2,19 @@
 	height: 40px;
 }
 
-.contact-card-container {
+.contact-content {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	margin-bottom: 10px;
 	margin-top: 10px;
+}
+
+.contact-card-container {
+	display:  flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
 }
 
 .mat-display-3 {
