--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -6,12 +6,15 @@
 			<mat-card-content>
 				<div class="divider"></div>
 				<div class="contact-card-container">
-					<img style="margin-bottom: 5px; height: 80px; width: 200px;" src="./assets/logo.png">
-					<img style="margin-bottom: 10px; height: 200px; width: 200px;" src="./assets/aboutclgimg.jpg">
-					<mat-list-item class="mat-body"><b>Address :</b> Shaunagar, Chinchwad MIDC, Pune - 19</mat-list-item>
-					<mat-list-item class="mat-body"><b style="font-weight: 700;">Phone :</b> 02027490299 / 27494970</mat-list-item>
-					<mat-list-item class="mat-body"><b style="font-weight: 700;">Website :</b> <a href="http://dypatilsanstha.com">www.dypatilsanstha.com</a></mat-list-item>
-					<mat-list-item class="mat-body"><b style="font-weight: 700;">E-mail :</b> <a href="http://info@dypatilsanstha.com">info@dypatilsanstha.com</a></mat-list-item>
+					<div class="contact-content" style="margin-right: 5px;">
+						<img style="margin-bottom: 5px; height: 80px; width: 200px;" src="./assets/logo.png">
+						<img style="margin-bottom: 10px; height: 200px; width: 200px;" src="./assets/aboutclgimg.jpg">
+						<mat-list-item class="mat-body"><b>Address :</b> Shaunagar, Chinchwad MIDC, Pune - 19</mat-list-item>
+						<mat-list-item class="mat-body"><b style="font-weight: 700;">Phone :</b> 02027490299 / 27494970</mat-list-item>
+						<mat-list-item class="mat-body"><b style="font-weight: 700;">Website :</b> <a href="http://dypatilsanstha.com">www.dypatilsanstha.com</a></mat-list-item>
+						<mat-list-item class="mat-body"><b style="font-weight: 700;">E-mail :</b> <a href="http://info@dypatilsanstha.com">info@dypatilsanstha.com</a></mat-list-item>
+					</div>
+					<div style="margin-left: 5px;"><img src="./assets/map.jpg"></div>
 				</div>
 				<div class="divider"></div>
 			</mat-card-content>
@@ -22,7 +25,7 @@
 		<mat-card style="margin-bottom: 20px;">
 			<mat-card-content>
 				<agm-map [latitude]="lat" [longitude]="lng">
-  					<agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+					<agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
 				</agm-map>
 			</mat-card-content>
 		</mat-card>
