--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,41 +4,41 @@
 
 <div class="banner-card-container">
 	<div class="banner-container" style="bottom: 0;">
-	<mat-card class="banner" id="commerce" style="margin-bottom: 5px;">	
-		<div class="text-block">
-			<p class="mat-title banner-title">"Commerce is a trial to predict the future."</p>
-		</div>
-		<img class="eco-img" src="./assets/economics.png">
-	</mat-card>
+		<mat-card class="banner" id="commerce" style="margin-bottom: 5px;">
+			<div class="text-block">
+				<p class="mat-title banner-title">"Commerce is a trial to predict the future."</p>
+			</div>
+			<img class="eco-img" src="./assets/economics.png">
+		</mat-card>
 
-	<mat-card class="banner" id="bca" style="margin-bottom: 5px;">
-		<div class="text-block">
-			<p class="mat-title banner-title">"Computer technology is so built into our lives that it is a part of the surrounding of every artist."</p>
-			<p class="mat-title banner-title">-Edsger Dijkshtra</p>
-		</div>
-		<img class="eco-img" src="./assets/computer-appai.png">
-	</mat-card>
+		<mat-card class="banner" id="bca" style="margin-bottom: 5px;">
+			<div class="text-block">
+				<p class="mat-title banner-title">"Computer technology is so built into our lives that it is a part of the surrounding of every artist."</p>
+				<p class="mat-title banner-title">-Edsger Dijkshtra</p>
+			</div>
+			<img class="eco-img" src="./assets/computer-appai.png">
+		</mat-card>
 
-	<mat-card class="banner" id="bcs">	
-		<div class="text-block">
-			<p class="mat-title banner-title">"Computer science is no more about computers than astronomy is about telescopes."</p>
-			<p class="mat-title banner-title">-Edsger Dijkshtra</p>
-		</div>
-		<img class="eco-img" src="./assets/computer-grad.png">
-	</mat-card>
+		<mat-card class="banner" id="bcs">
+			<div class="text-block">
+				<p class="mat-title banner-title">"Computer science is no more about computers than astronomy is about telescopes."</p>
+				<p class="mat-title banner-title">-Edsger Dijkshtra</p>
+			</div>
+			<img class="eco-img" src="./assets/computer-grad.png">
+		</mat-card>
 	</div>
 	<mat-card class="features-card">
 		<div class="divider"></div>
 		<mat-list role="list">
- 			<mat-list-item role="listitem" style="font-weight: normal">Highly qualified and experienced teaching staff</mat-list-item>
- 			<mat-divider></mat-divider>
- 			<mat-list-item role="listitem" style="font-weight: normal">Well equipped library and laboratories</mat-list-item>
- 			<mat-divider></mat-divider>
- 			<mat-list-item role="listitem" style="font-weight: normal">Personal Attention</mat-list-item>
- 			<mat-divider></mat-divider>
- 			<mat-list-item role="listitem" style="font-weight: normal">Situated on Corporation bus route</mat-list-item>
- 			<mat-divider></mat-divider>
- 			<mat-list-item role="listitem" style="font-weight: normal">Fees as per Government of Pune rule</mat-list-item>
+			<mat-list-item role="listitem" style="font-weight: normal">Highly qualified and experienced teaching staff</mat-list-item>
+			<mat-divider></mat-divider>
+			<mat-list-item role="listitem" style="font-weight: normal">Well equipped library and laboratories</mat-list-item>
+			<mat-divider></mat-divider>
+			<mat-list-item role="listitem" style="font-weight: normal">Personal Attention</mat-list-item>
+			<mat-divider></mat-divider>
+			<mat-list-item role="listitem" style="font-weight: normal">Situated on Corporation bus route</mat-list-item>
+			<mat-divider></mat-divider>
+			<mat-list-item role="listitem" style="font-weight: normal">Fees as per Government of Pune rule</mat-list-item>
 		</mat-list>
 		<div class="divider" style="margin-top: 100px;"></div>
 	</mat-card>
@@ -46,28 +46,25 @@
 
 <mat-card style="margin-bottom: 10px;">
 	<mat-card-header>
-		<mat-card-title><p class="mat-title" style="">Our Inspirations</p></mat-card-title>
+		<mat-card-title>
+			<p class="mat-title" style="">Our Inspirations</p>
+		</mat-card-title>
 	</mat-card-header>
 	<div class="divider"></div>
 	<mat-card-content class="inspiration-container">
 		<div style="width: 50%; margin-right: 20px;">
 			<img style="float:left; margin-right: 20px;" src="./assets/inspiration1.jpg">
-			<p class="mat-body-1"><b>Padmashree Dr. D. Y. Patil,</b> Governor of Bihar State, Chancellor, Dr. D.Y. Patil University
-			, Founder President, Dr. D.Y. Patil Pratishthan, Mumbai, Pune, Kolhapur</p>
-			<p class="mat-body-1">I believe in developing responsible citizenship and social responsibility by perception and example. 
-			We provide a friendly and supportive environment that not only enhance the self esteem of individual but also challenges 
-			each to develop understanding skills, abilities and talents to the full. We expect and demand high standards from all our 
-			students and staff and we celebrate the achievements of all Dr. D.Y. Patil Junior College values. Its past builds upon 
-			its strengths, approaching new heights as it continuously looks to the future.</p>
+			<p class="mat-body-1"><b>Padmashree Dr. D. Y. Patil,</b> Governor of Bihar State, Chancellor, Dr. D.Y. Patil University , Founder President, Dr. D.Y. Patil Pratishthan, Mumbai, Pune, Kolhapur</p>
+			<p class="mat-body-1">I believe in developing responsible citizenship and social responsibility by perception and example. We provide a friendly and supportive environment that not only enhance the self esteem of individual but also challenges each to develop understanding
+				skills, abilities and talents to the full. We expect and demand high standards from all our students and staff and we celebrate the achievements of all Dr. D.Y. Patil Junior College values. Its past builds upon its strengths, approaching new heights
+				as it continuously looks to the future.</p>
 		</div>
 		<div style="width: 50%;">
 			<img style="float:left; margin-right: 20px;" src="./assets/inspiration2.jpg">
 			<p class="mat-body-1"><b>Shri B.D. Kotkar,</b> Founder President, Shikshan Maharshi Dr. D.Y. Patil Shikshan Sanstha</p>
-			<p class="mat-body-1">Dr. D.Y. Patil Junior College values the right of every individual to realize his or her potential 
-			through the aquisition of knowledge, skills and values caring supportive environment. I believe in upholding the freedom
-			 of each student to think, create and discover based on true understandings of their cultures and traditions, whilst respecting
-			  the cultures and spiritual insights of others. We promote equal opportunities for all our students irrespective of gender 
-			  and of religious, social or ethnic background.</p>
+			<p class="mat-body-1">Dr. D.Y. Patil Junior College values the right of every individual to realize his or her potential through the aquisition of knowledge, skills and values caring supportive environment. I believe in upholding the freedom of each student to think, create
+				and discover based on true understandings of their cultures and traditions, whilst respecting the cultures and spiritual insights of others. We promote equal opportunities for all our students irrespective of gender and of religious, social or ethnic
+				background.</p>
 		</div>
 	</mat-card-content>
 </mat-card>
@@ -79,14 +76,10 @@
 		<div>
 			<span style="float:left;"><img class="img" src="./assets/messg1.jpg"></span>
 			<p class="mat-body-1"><b>Mrs. Kusum B. Kotkar,</b> Chairman, Shikshan Maharshi Dr. D.Y. Patil Shikshan Sanstha</p>
-			<p class="mat-body-1">Dr. D.Y. Patil Junior College has been modeled on the best practices of the modern schools in and
-			 around the country. The curriculum helps the students to have intellectual as well as rounded personality development
-			  of the child. Dr. D. Y. Patil Junior College attracts students from various places and train them to aspire to
-			   become the future leaders realizing their responsibilities towards others. Students here get exposed to a broad
-			    range of culture, beliefs which help them to show tolerance at adulthood. Dr. D. Y. Patil Junior College is an
-			     international ambitious, outward looking modern school which also emphasis on discipline, courtesy, honesty as
-			      their virtues to make these the strength of it's students.</p>
-			<p class="mat-body-1">Wishing you all the best!</p>	
+			<p class="mat-body-1">Dr. D.Y. Patil Junior College has been modeled on the best practices of the modern schools in and around the country. The curriculum helps the students to have intellectual as well as rounded personality development of the child. Dr. D. Y. Patil Junior
+				College attracts students from various places and train them to aspire to become the future leaders realizing their responsibilities towards others. Students here get exposed to a broad range of culture, beliefs which help them to show tolerance at
+				adulthood. Dr. D. Y. Patil Junior College is an international ambitious, outward looking modern school which also emphasis on discipline, courtesy, honesty as their virtues to make these the strength of it's students.</p>
+			<p class="mat-body-1">Wishing you all the best!</p>
 		</div>
 	</mat-card>
 	<mat-card class="card-items" style="margin-left:7.5px;">
@@ -94,15 +87,9 @@
 		<div>
 			<span style="float:left;"><img class="img" src="./assets/messg2.jpg"></span>
 			<p class="mat-body-1"><b>Shri. Abhay B. Kotkar,</b> Vice President, Shikshan Maharshi Dr. D.Y. Patil Shikshan Sanstha</p>
-			<p class="mat-body-1">Dr. D. Y. Patil Junior College aims in imparting Quality education to children as we believe that
-			 school is a foundation where moral and ethical standards should be inculcated among children. We at Dr. D. Y. Patil
-			  Junior College School strive to practice it by providing them state of the art facilities & opportunities and develop
-			   children into socially responsible citizens. Other courses run by Shikshan Maharshi Dr. D. Y. Patil Shikshan Sanstha
-			    are Dr. D. Y. Patil College of Arts, Science & Commerce (Affiliated to University of Pune) & Dr. D. Y. Patil Centre
-			     For Management and Research (MBA)(Approved by AICTE, Affiliated to University of Pune and Recognized by Government
-			      of Maharashtra). The Sanstha provides education from KG to PG</p>
+			<p class="mat-body-1">Dr. D. Y. Patil Junior College aims in imparting Quality education to children as we believe that school is a foundation where moral and ethical standards should be inculcated among children. We at Dr. D. Y. Patil Junior College School strive to practice
+				it by providing them state of the art facilities & opportunities and develop children into socially responsible citizens. Other courses run by Shikshan Maharshi Dr. D. Y. Patil Shikshan Sanstha are Dr. D. Y. Patil College of Arts, Science & Commerce
+				(Affiliated to University of Pune) & Dr. D. Y. Patil Centre For Management and Research (MBA)(Approved by AICTE, Affiliated to University of Pune and Recognized by Government of Maharashtra). The Sanstha provides education from KG to PG</p>
 		</div>
 	</mat-card>
 </div>
-
-	
